Grace/tests/gibbs/errors/t112.grace
// ERROR = P1009
type Nothing - {}
